# plansys2-hospital-cavros

./: CMakeLists.txt  README.md  package.xml
config/: waypoints.yaml
launch/: gz_launcher.py  hospital.launch.py  sim.launch.py  tiago_navigation.launch.py
maps/: hospital.pgm  hospital.yaml
pddl/: problem.pddl  project_domain.pddl  project_problem.pddl
src/: controller_node.cpp  move_action_node.cpp  pick_object_node.cpp  place_object_node.cpp
